# MLtask

./: READ  README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW05/: HW05.ipynb  requirements.txt
homeworks/HW06/: HW06.ipynb  S06-hw-report-template.md  report.md
homeworks/HW07/: HW07.ipynb  main.py  pyproject.toml  report.md
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW10-11/: report.md
homeworks/HW12/: HW12.ipynb  S12-hw-report-template.md
project/: .gitignore  README.md  pyproject.toml  report.md  self-checklist.md
project/artifacts/01_eda/: full_train_profile.json
project/artifacts/02_fe/: feature_names.joblib  final_pipeline.joblib
project/artifacts/03_modeling_eval/: best_meta_model.json  metrics_comparison.csv  search_summaries.json  submission.csv
project/artifacts/cli/reports/: correlation.csv  missing.csv  report.md  summary.csv
project/artifacts/cli/reports/top_categories/: Alley.csv  LandContour.csv  LotShape.csv  MSZoning.csv  Street.csv
project/artifacts/cli/submissions/: submission.csv
project/configs/: base.yaml  best_meta_model.json  data_params.yaml  env.example
project/notebooks/: 01_Exploratory_Data_Analysis.ipynb  02_Data Cleaning_Feature Engineering.ipynb  03_Modeling_and_Evaluation.ipynb
project/reports/: 01_eda_analysis_report.md  02_data cleaning_report.md  03_modeling_evaluation_report.md
project/src/: api.py  cli.py  config.py  core.py  logger_setup.py  pipeline.py  transformers.py  viz.py
project/tests/: test_cli.py  test_core.py  test_transformers.py
(+29 files in other folders)
